<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_contact"
        android:title="@string/menu_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_our_apps"
        android:title="@string/menu_our_apps"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/app_carepal_pets"          android:title="CarePal: Mascotas y Salud" />
            <item android:id="@+id/app_carepal_cars"          android:title="CarePal: Autos y Service" />
            <item android:id="@+id/app_carepal_family"        android:title="CarePal: Familia y Agenda" />
            <item android:id="@+id/app_carepal_house"         android:title="CarePal: Hogar y Mantenimiento" />
            <item android:id="@+id/app_griscal"               android:title="Griscal: Hogar y Familia" />
            <item android:id="@+id/app_milinterna"            android:title="Mi Linterna" />
            <item android:id="@+id/app_milupa"                android:title="MiLupa" />
            <item android:id="@+id/app_permission_inspector"  android:title="Permission Inspector" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/units"
        android:title="@string/units_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:title="@string/menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/rate"
        android:title="@string/menu_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_version"
        android:enabled="false"
        android:title="v"
        app:showAsAction="never" />

</menu>
