<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnClose"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/play"
            android:layout_toRightOf="@+id/play">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/uno"
                 />

            <TextView
                android:id="@+id/txtTuto1"
                android:text="@string/agregaDireccion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/dos" />

            <TextView
                android:id="@+id/textView2"
                android:text="@string/escribeDireccion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tres" />

            <TextView
                android:id="@+id/textView3"
                android:text="@string/seleccionaDireccion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cuatro" />

            <TextView
                android:id="@+id/txtTuto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tartaEnConectar"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cinco" />

            <TextView
                android:id="@+id/txtTuto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/modificarAlerta"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/seis" />

            <TextView
                android:id="@+id/textView4"
                android:text="@string/escribeDistancia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/siete" />

            <TextView
                android:id="@+id/textView5"
                android:text="@string/inicia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ocho" />

            <TextView
                android:id="@+id/textView6"
                android:text="@string/barra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/nueve" />

            <TextView
                android:id="@+id/textView7"
                android:text="@string/volvermapa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/diez" />

            <TextView
                android:id="@+id/textView8"
                android:text="@string/cuandoLlegues"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/once" />

            <TextView
                android:id="@+id/textView9"
                android:text="@string/apagarAlarma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/doce" />

            <TextView
                android:id="@+id/textView10"
                android:text="@string/gracias"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"/>


        </ViewFlipper>

    </LinearLayout>
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/closetoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        />
    </RelativeLayout>
</LinearLayout>